# enterprise-sdk-samples

./: .editorconfig  .gitignore  LICENSE  README.md
dotnet/: .gitignore
dotnet/Basic/ApiKey/: ApiKey.cs
dotnet/Basic/OAuth/: OAuth.cs
dotnet/PAEngine/: Sample.cs  Sample.csproj
java/: .gitignore
java/Basic/ApiKey/: build.gradle  settings.gradle
java/Basic/ApiKey/src/main/java/: ApiKey.java
java/Basic/OAuth/: build.gradle  settings.gradle
java/Basic/OAuth/src/main/java/: OAuth.java
java/PAEngine/: build.gradle  settings.gradle
java/PAEngine/src/main/java/: Sample.java
python/: .gitignore
python/Basic/ApiKey/: apikey.py  pyproject.toml
python/Basic/Oauth/: oauth.py  pyproject.toml
python/PAEngine/: pyproject.toml  sample.py
typescript/: .gitignore
typescript/Basic/ApiKey/: package.json
typescript/Basic/ApiKey/src/: apikey.ts
typescript/Basic/OAuth/: package.json
typescript/Basic/OAuth/src/: oauth.ts
typescript/PAEngine/: package.json  tsconfig.json
typescript/PAEngine/src/: sample.ts
